Fixed icons not showing

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -114,4 +114,7 @@ label {
 .icon {
     width: 16px;
     height: 16px;
+    display: inline-block;
+    background-size: 100% 100%;
+    margin: 0 4px 0 2px;
 }
